updated state farm

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 										<h2>Hi, I'm Justin</h2>
 										<p>This is my personal site detailing my work experience and skill set as a software engineer</p>
 									</header>
-									<p>I am currently a sophomore at University of Illinois, Urbana-Champaign. I am studing Computer Science with a focus on Software Engineering. Leedle leedle leedle</p>
+									<p>I am currently a sophomore at University of Illinois, Urbana-Champaign. I am studying 
+									Computer Science with a focus on Software 
+									Engineering. </p>
 								</div>
 							</section>
 
@@ -66,9 +68,9 @@
                         <h4>Systems Intern</h4>
 												<i>(January 2016 - Current)</i>											
 												<ul>
-													<li>Stuff I do</li>
-													<li>Other Stuff I do</li>
-													<li>Stuff</li>
+													<li>Working on data scanning solution which searches for ensitive information in test environments</li>
+													<li>Researching, designing and implementing a migration from Apache Pig to Apache Spark using Scala.</li>
+													<li>Attend meetings and collaborate with project lead to ensure specifications are being met.</li>
 												</ul>
 											</div>
 										</article>
