fixed links and minor changes..

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -63,7 +63,7 @@
 									<p>Here you can find a list of my work experience relevant to my pursuit of a career in software engineering.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/statefarm.png" alt="" /></a>
+											<a href="https://statefarm.com" class="image"><img src="images/statefarm.png" alt="" /></a>
 											<div class="inner">
                         <h4>Systems Intern</h4>
 												<i>(January 2016 - Current)</i>											
@@ -75,19 +75,20 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/inetsoft.jpg" alt="" /></a>
+											<a href="https://inetsoft.com" class="image"><img src="images/inetsoft.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Software Engineering Intern</h4>
 												<i>(May 2015 - August 2015)</i> 
                         <ul>
 													<li>Converted business intelligence GUI's from Flash to HTML5 with Angular JS and Bootstrap.</li>
 													<li>Updated the format, layout, and content of over 400 webpages using HTML and CSS. </li>
-													<li>https://www.inetsoft.com/business/business/dashboard\​_reporting\​_tool/</li>
+													<li>Worked on Java programs to efficiently find and replace HTML code reudcing data entry time by at least 50%.</li>
+													
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/uiuc.png" alt="" /></a>
+											<a href="https://cs.illinois.edu" class="image"><img src="images/uiuc.png" alt="" /></a>
 											<div class="inner">
 												<h4>Course Assistant</h4>
                         <i>(September 2015 - December 2015)</i> 
