--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/main.css"/>
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
+    <link rel="shortcut icon" type="image/x-icon" href="images/icon.png" />
 </head>
 <body>
 
@@ -52,8 +53,7 @@
                     <h2>Hi, I'm Justin</h2>
                     <p>This is my personal site detailing my work experience and skill set as a software engineer</p>
                 </header>
-                <p>I am currently a Junior at University of Illinois, Urbana-Champaign. I am studying
-                    Computer Science with a minor in statistics </p>
+                <p>I am a Software Engineer with a bachelor's degree in Computer Science from the University of Illinois.</p>
             </div>
         </section>
 
@@ -64,8 +64,51 @@
                 <p>Here you can find a list of my work experience relevant to my pursuit of a career in software
                     engineering.</p>
                 <div class="features">
+                   <article>
+                        <a href="https://www.isws.illinois.edu/" class="image"><img src="images/ilstatewatersurvey.png" alt=""/></a>
+                        <div class="inner">
+                            <h4>Web Assistant</h4>
+                            <h5>Illinois State Water Survey</h5>
+                            <i>(October 2017 - April 2018)</i>
+                            <ul>
+                                <li>
+                                    Designed new and modified old aspx web pages using vb.net and html.   
+                                </li>
+                                <li>
+                                    Created a secure and stable register and login service which utilizes MD5 encryption which currently has over 300 users.
+                                </li>
+                                <li>
+                                    Created several reusable and dynamic widgets including RSS feeds and image rotaters. 
+                               </li>
+
+                            </ul>
+                        </div>
+                    </article>
+                   <article>
+                        <a href="https://amazon.com" class="image"><img src="images/amazonAWS.png" alt=""/></a>
+                        <div class="inner">
+                            <h4>SDE Intern</h4>
+                            <h5>AWS Config</h5>
+                            <i>(May 2017 - August 2017)</i>
+                            <ul>
+                                <li>
+                                    Fully designed all aspects of my projects including database schemas, technologies, and integration with other services.
+                                </li>
+                                <li>
+                                    Created a service that served control-plane and data-plane data from DynamDB using SpringBoot.
+                                </li>
+                                <li>
+                                    Exposed my service by creating a web frontend that could make requests and display the information returned by parsing JSON recursively.
+                                </li>
+                                <li>
+                                   Implemented a tiered authentication system that only allowed certain users to use the service depending on the sensitivity of the data being served.  
+                                </li>
+
+                            </ul>
+                        </div>
+                    </article>
                     <article>
-                        <a href="https://statefarm.com" class="image"><img src="images/Allstate.jpg" alt=""/></a>
+                        <a href="https://allstate.com" class="image"><img src="images/Allstate.jpg" alt=""/></a>
                         <div class="inner">
                             <h4>Application Developer Intern </h4>
                             <h5>Innovation and R&D</h5>
@@ -131,40 +174,19 @@
                             </ul>
                         </div>
                     </article>
-                    <article>
-                        <a href="https://cs.illinois.edu" class="image"><img src="images/uiuc.png" alt=""/></a>
-                        <div class="inner">
-                            <h4>Course Assistant</h4>
-                            <i>(September 2015 - December 2015)</i>
-                            <ul>
-                                <li>Helped CS125: Introduction to Computer Science students overcome conceptual and
-                                    programming difficulties in a lab environment.
-                                </li>
-                                <li>Taught 50 students computer science concepts including but not limited to recursion,
-                                    algorithms, and objected oriented programming.
-                                </li>
-                            </ul>
-                        </div>
-                    </article>
+                    
                 </div>
             </div>
         </section>
 
-        <!-- Two -->
-        <!--<section id="two">-->
-        <!--<div class="container">-->
-        <!--<h3>What I Like To Do</h3>-->
-        <!--<p>I'm a busy bee. Bzzzz. Here are some things I am currently keeping myself busy with as well as some of my interests</p>-->
-        <!--<ul class="feature-icons">-->
-        <!--<li class="fa-university">Pursuing degree in CS @ UIUC</li>-->
-        <!--<li class="fa-cubes">Work part-time for State Farm</li>-->
-        <!--<li class="fa-code">Enhance my Coding Skills</li>-->
-        <!--<li class="fa-book">Study Study Study!</li>-->
-        <!--<li class="fa-heart">Work out in spare time</li>-->
-        <!--<li class="fa-users">Member of Kappa Delta Rho</li>-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--</section>-->
+<!--         Two -->
+        <section id="two">
+           <div class="container">
+              <h3>Independent Projects</h3>
+              <p>Outside of school and work, I love to stay busy working on personal projects. Here is a list of some of the ones I'm working on and finished. </p>
+             
+           </div>
+        </section>
 
 
         <!-- Four -->
